# ai-tools

./: .dockerignore  .gitignore  .slug-post-clean  .slugignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  logging_config.py  main.py
app/ai_models/: __init__.py  image_classification.py
app/config/: __init__.py
app/dtos/: __init__.py  image_classification_dto.py
app/routers/: __init__.py  image_classification_router.py
